# project_pytest_practice

./: .coverage  pyproject.toml
src/: task_2.py
tests/: conftest.py  test_main.py  test_task_2.py
